# mq-strategy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/helper/: client_id_helper.rs  instrument_id_helper.rs  instrument_id_opvec_helper.rs  mod.rs  quantity_helper.rs  strategy_id_helper.rs
crates/common/src/risk/: mod.rs  mq_risk_manager.rs  position_manager.rs
crates/indicators/: Cargo.toml
crates/indicators/src/volatility/: atr_normalized.rs  mod.rs
strategy/demo-strategy/: Cargo.toml
strategy/demo-strategy/config/: default.json
strategy/demo-strategy/examples/: demo_strategy_example.rs
strategy/demo-strategy/src/: config.rs  lib.rs  strategy.rs
strategy/dynwrap-strategy/: Cargo.toml
strategy/dynwrap-strategy/src/: config_wrapper.rs  lib.rs  macros.rs  strategy_wrapper.rs  strategy_wrapper_ffi.rs
strategy/sma-strategy/: Cargo.toml
strategy/staticwrap-strategy/: Cargo.toml
strategy/staticwrap-strategy/src/: lib.rs  types.rs  wrapper.rs
