[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    "crates/common",
    # -- Custom Indicators
    "crates/indicators",
    # -- Strategys
    "strategy/sma-strategy"
]

[workspace.dependencies]
nautilus-core = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-model = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-indicators = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }

