[workspace.lints.rust]
unsafe_code = "warn" # forbid

[workspace]
resolver = "2"
members = [
    "crates/common",
    # -- Custom Indicators
    "crates/indicators", "strategy/demo-strategy", "strategy/dynwrap-strategy",
    # -- Strategys
    "strategy/sma-strategy"
, "strategy/staticwrap-strategy"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["mountainsea lab <w1999wtw3537@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
description = "A nautilus trader customs indicators strategy"
categories = ["indicators", "strategy", "nautilus_trader"]
keywords = [
    "nautilus_trader",
    "indicators",
    "strategys",
]
documentation = ""
repository = "https://github.com/mountainsea-lab/mq-strategy.git"
homepage = ""


[workspace.dependencies]
nautilus-common = { git = "https://github.com/nautechsystems/nautilus_trader.git" , features = ['indicators', "live"] , branch = "master" }
nautilus-core = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-model = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-indicators = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-trading = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }

mq-strategy-common = {path = "crates/common", version = "0.1.0" }
mq-demo-strategy = {path = "strategy/demo-strategy", version = "0.1.0"}
dynwrap-strategy = {path = "strategy/dynwrap-strategy", version = "0.1.0"}
staticwrap-strategy = {path = "strategy/staticwrap-strategy", version = "0.1.0"}

time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
log = "0.4.29"
rust_decimal = "1.39.0"
anyhow = "^1.0.102"
serde = "1.0.228"
serde_json = "1.0.149"
