[package]
name = "mq-strategy-common"
readme = ""
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "strategy common utils for strategy"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nautilus-model = { workspace = true, features = ["stubs"] }

time = {workspace = true}
log = {workspace = true}

[lints]
workspace = true

[lib]
name = "mq_strategy_common"
crate-type = ["rlib", "cdylib"]
