[package]
name = "mq-demo-strategy"
readme = ""
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "demo strategy"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[lints]
workspace = true
