[package]
name = "dynwrap-strategy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "dynwrap_strategy"
crate-type = ["rlib", "cdylib"]

[dependencies]
nautilus-model = { workspace = true, features = ["stubs"] }
nautilus-common = { workspace = true }
nautilus-trading = { workspace = true }

mq-strategy-common = { workspace = true }

serde = {  workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
# -- Load Dyn Strategy
libloading = "0.8"