[package]
name = "mq-sma-strategy"
readme = ""
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "sma strategy example"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[lints]
workspace = true

[lib]
name = "mq_sma_strategy"
crate-type = ["rlib", "cdylib"]
