[package]
name = "staticwrap-strategy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mq-demo-strategy.workspace = true
anyhow.workspace = true
dynwrap-strategy.workspace = true

[lints]
workspace = true
